fix(history): adjust padding in `.history-content` for consistent spacing

--- a/apps/client/src/app/pages/history/history.component.scss
+++ b/apps/client/src/app/pages/history/history.component.scss
@@ -5,6 +5,6 @@
 
 .history-content {
     height: 100%;
-    padding: 1rem 0 1rem 1rem;
+    padding: 1rem 0 0 1rem;
     box-sizing: border-box;
 }
